Perkin-UAT/force-app/main/default/objects/Custom_Validation_Setup__c/Custom_Validation_Setup__c.object-meta.xml
<CustomObject>
    <description>Custom Object to allow PKI Admin to add Object Fields for validations based on the User/Profile chosen.</description>
    <label>Custom Validation Setup</label>
    <nameField>
        <displayFormat>CV-{0000}</displayFormat>
        <label>Account Validation #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Custom Validations Setup</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>