Perkin-UAT/force-app/main/default/objects/Custom_Validation_Setup__c/fields/Mandatory_Fields__c.field-meta.xml
<CustomField>
    <fullName>Mandatory_Fields__c</fullName>
    <inlineHelpText>The list of Fields that are Mandatory for the User/Profile Chosen</inlineHelpText>
    <label>Mandatory Fields</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>