Perkin-UAT/force-app/main/default/objects/Custom_Validation_Setup__c/fields/Non_Changeable_Fields__c.field-meta.xml
<CustomField>
    <fullName>Non_Changeable_Fields__c</fullName>
    <inlineHelpText>The list of Fields that are not editable for the User/Profile Chosen</inlineHelpText>
    <label>Non Changeable Fields</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>