Perkin-UAT/force-app/main/default/objects/Custom_Validation_Setup__c/fields/Object_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Object_API_Name__c</fullName>
    <inlineHelpText>API Name of the object for which the validation must apply</inlineHelpText>
    <label>Object API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>