Perkin-UAT/force-app/main/default/objects/Custom_Validation_Setup__c/fields/User_Profile__c.field-meta.xml
<CustomField>
    <fullName>User_Profile__c</fullName>
    <inlineHelpText>Does the custom object setting apply to a group of Users or Profile?</inlineHelpText>
    <label>User/Profile</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>User</fullName>
            </value>
            <value>
                <fullName>Profile</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>