Perkin-UAT/force-app/main/default/objects/Custom_Validation_Setup__c/fields/Username_Profile_name__c.field-meta.xml
<CustomField>
    <fullName>Username_Profile_name__c</fullName>
    <inlineHelpText>The Username or the Profile name for which the custom setting will be applicable</inlineHelpText>
    <label>Username/Profile name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>