Perkin-UAT/force-app/main/default/objects/Custom_Validation_Setup__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>User_Profile__c</columns>
    <columns>Username_Profile_name__c</columns>
    <columns>Mandatory_Fields__c</columns>
    <columns>Non_Changeable_Fields__c</columns>
    <columns>Object_API_Name__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>